# annotator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  annotator-prd.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
annotator/: __init__.py  auth.py  cli.py  client.py  config.py  errors.py  labeler.py  resolver.py  runner.py
annotator/engine/: __init__.py  base.py  llama_cpp.py  mlx.py  vllm.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_engine.py  test_integration.py  test_labeler.py  test_resolver.py  test_runner.py
