[project]
name = "test-ann"
dynamic = ["version"]
description = "Distributed annotation worker for EmbedKombinat"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "EmbedKombinat" },
]
keywords = ["annotation", "labeling", "llm", "embedding", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "rich>=13.9",
]

[project.scripts]
annotator = "annotator.cli:app"

[project.optional-dependencies]
vllm = ["vllm>=0.8"]
mlx = ["mlx-lm>=0.20"]
cpu = ["llama-cpp-python>=0.3"]
dev = [
    "pytest>=8.3",
    "pytest-httpx>=0.35",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://embedkombinat.github.io/embed-kombinat.github.io/index.html"
Repository = "https://github.com/embedkombinat/annotator"
Issues = "https://github.com/embedkombinat/annotator/issues"

[tool.hatch.version]
path = "annotator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["annotator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=annotator --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["annotator"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
